@@ -29,53 +29,55 @@ class ExpressionTest {
 
     private static Stream<Arguments> generateIllegalExpressionData() {
         return Stream.of(
-                Arguments.of(new CustomDeque<>(List.of(new Separator(";"))), new CustomDeque<>(List.of(Operand.of(1)))),
-                Arguments.of(new CustomDeque<>(List.of(new Separator(";"))), new CustomDeque<>(List.of(Operand.of(1), Operand.of(2), Operand.of(3)))),
-                Arguments.of(new CustomDeque<>(List.of(new Separator(";"), new Separator(";"))), new CustomDeque<>(List.of(Operand.of(1))))
+                Arguments.of(new CustomDeque<>(List.of(Separator.of(";"))), new CustomDeque<>(List.of(Operand.of(1)))),
+                Arguments.of(new CustomDeque<>(List.of(Separator.of(";"))), new CustomDeque<>(List.of(Operand.of(1), Operand.of(2), Operand.of(3)))),
+                Arguments.of(new CustomDeque<>(List.of(Separator.of(";"), Separator.of(";"))), new CustomDeque<>(List.of(Operand.of(1))))
         );
     }
 
     @Test
-    @DisplayName("처음 두개의 피연산자를 반환하는지 확인")
-    void testPeekFirstTwoOperands() {
-        int firstOperandValue = 1;
-        int secondOperandValue = 2;
-        Expression expression = generateExpression(List.of(";"), List.of(firstOperandValue, secondOperandValue));
+    @DisplayName("가장 앞의 피연산자를 반환하는지 확인")
+    void testPeekFirstOperand() {
+        Operand expected = Operand.of(1);
+        Expression expression = new Expression(new CustomDeque<>(Collections.EMPTY_LIST), new CustomDeque<>(List.of(expected)));
 
-        List<Operand> twoOperands = expression.peekFirstTwoOperands();
-        Operand firstOperand = twoOperands.get(0);
-        Operand secondOperand = twoOperands.get(1);
+        Operand firstOperand = expression.peekFirstOperand();
 
-        assertThat(firstOperand).isEqualTo(Operand.of(firstOperandValue));
-        assertThat(secondOperand).isEqualTo(Operand.of(secondOperandValue));
+        assertThat(firstOperand).isEqualTo(expected);
     }
 
     @Test
-    @DisplayName("피연산자가 두개 이하일 때 NoSuchElementException 발생 확인")
+    @DisplayName("두번째 피연산자를 반환하는지 확인")
+    void testPeekSecondOperand() {
+        Operand firstOperand = Operand.of(1);
+        Operand secondOperand = Operand.of(2);
+        CustomDeque<Separator> dummySeparatorDeque = new CustomDeque<>(List.of(Separator.of("")));
+        CustomDeque<Operand> operandDeque = new CustomDeque<>(List.of(firstOperand, secondOperand));
+        Expression expression = new Expression(dummySeparatorDeque, operandDeque);
+;
+        Operand actual = expression.peekSecondOperand();
+
+        assertThat(actual).isEqualTo(secondOperand);
+    }
+
+    @Test
+    @DisplayName("피연산자가 두개 이하일 때 peekSecondOperand시 NoSuchElementException 발생 확인")
     void testPeekFirstTwoOperandsThrowNoSuchElementException() {
         Expression expression = generateExpression(Collections.emptyList(), List.of(1));
 
-        assertThatThrownBy(expression::peekFirstTwoOperands).isInstanceOf(NoSuchElementException.class);
+        assertThatThrownBy(expression::peekSecondOperand).isInstanceOf(NoSuchElementException.class);
     }
 
     @Test
-    @DisplayName("Expression이 비어있을때 피연산자 peek시 NoSuchElementException 발생 확인")
-    void testPeekFirstOperandThrowNoSuchElementException() {
-        Expression expression = generateExpression(Collections.emptyList(), Collections.emptyList());
-
-        assertThatThrownBy(expression::peekFirstOperand).isInstanceOf(NoSuchElementException.class);
-    }
-
-    @Test
-    @DisplayName("Expression이 비어있을때 구분자 peek시 NoSuchElementException 발생 확인")
-    void peekFirstSeparator() {
-        Expression expression = generateExpression(Collections.emptyList(), Collections.emptyList());
+    @DisplayName("Separator가 더이상 없을떄 peekSeparator 시 NoSuchElementException 발생 확인")
+    void peekSeparator() {
+        Expression expression = generateExpression(Collections.emptyList(), List.of(1));
 
         assertThatThrownBy(expression::peekFirstSeparator).isInstanceOf(NoSuchElementException.class);
     }
 
     @Test
-    @DisplayName("맨 앞의 연산 결과를 주면 다음 연산을 위한 Expression을 생성하는지 확인")
+    @DisplayName("앞 두개의 operand와 하나의 separator를 제거하고 주어진 operand를 가장 앞으로 넣어 Expression을 생성하는지 확인")
     void updateFirstOperationResult() {
         String firstSeparator = "firstSeparator";
         String secondSeparator = "secondSeparator";
@@ -92,7 +94,7 @@ class ExpressionTest {
     }
 
     @Test
-    @DisplayName("speartor와 피연산자의 구성이 같다면 같은 객체로 판단하는지 확인")
+    @DisplayName("speartor와 operand의 구성이 같다면 같은 객체로 판단하는지 확인")
     void testEquals() {
         Expression expression = generateExpression(List.of(";"), List.of(1, 2));
         Expression anotherExpression = generateExpression(List.of(";"), List.of(1, 2));
@@ -111,10 +113,10 @@ class ExpressionTest {
 
     private static Expression generateExpression(List<String> separatorString, List<Integer> operands) {
         CustomDeque<Separator> separatorDeque = separatorString.stream()
-                .map(Separator::new)
+                .map(Separator::of)
                 .collect(Collectors.toCollection(CustomDeque::new));
         CustomDeque<Operand> operandDeque = operands.stream()
-                .map(value -> Operand.of(value))
+                .map(Operand::of)
                 .collect(Collectors.toCollection(CustomDeque::new));
         return new Expression(separatorDeque, operandDeque);
     }
